--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/project-bni-db
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/project-bni-db
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,5 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
