--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+file.upload.dir=uploads
+spring.servlet.multipart.enabled=true
