--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure-include=health,info
 management.endpoint.health.show-details=always
 
-file.upload-dir=uploads
+file.upload-dir=app/uploads
 spring.servlet.multipart.enabled=true
