--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/project-bni-db
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/project-bni-db
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,3 +14,5 @@ management.endpoint.health.show-details=always
 
 file.upload-dir=/app/uploads
 spring.servlet.multipart.enabled=true
+
+
